# WebHW2

./: Dockerfile  main.py  pyproject.toml  requirements.txt
