[tool.poetry]
name = "webhw2"
version = "0.1.0"
description = ""
authors = ["Anton Kalchenko  <anton11042002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
termcolor = "^2.3.0"
colorama = "^0.4.6"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
